week 3 hw 2 question3

--- a/week3hw2q3.html
+++ b/week3hw2q3.html
@@ -71,12 +71,12 @@ tr:nth-child(even) {
         </tr>
 </table>
 <p>These are the students involved in the activity you entered:</p>
-<ul id="studentSports"></ul>
+<p id="studentSports"></p>
 
 <br>
 <br>
 <p>These are the students whose activity is swimming:</p>
-<ul id="studentSwim"></ul>
+<p id="studentSwim"></p>
 
 <script>
      let studentInput = prompt("Please enter your activity: ")
